--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.littleshoot</groupId>
+      <artifactId>littleproxy</artifactId>
+      <version>1.1.0-beta1</version>
+    </dependency>
+
   </dependencies>
 </project>
