--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,28 @@
     </dependency>
 
     <dependency>
-      <groupId>org.littleshoot</groupId>
-      <artifactId>littleproxy</artifactId>
-      <version>1.1.0-beta1</version>
+      <groupId>net.lightbody.bmp</groupId>
+      <artifactId>browsermob-proxy</artifactId>
+      <version>2.1.0-beta-4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.lightbody.bmp</groupId>
+      <artifactId>browsermob-core-littleproxy</artifactId>
+      <version>2.1.0-beta-4</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.13</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.13</version>
     </dependency>
 
   </dependencies>
